--- a/.NET/WebApplication1/appsettings.json
+++ b/.NET/WebApplication1/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "data source=swamp\\SQLEXPRESS;initial catalog=MessengerDB;integrated security=true"
+    "DefaultConnection": "data source=localhost;initial catalog=MessengerDB;integrated security=true"
   }
 }
